# workout-tracker

./: .env.example  .gitignore  README.md  create_img.py  database.py  main.py  pyproject.toml  workout_tracker.db
routers/: completed_gym.py  completed_run.py  exercises.py  gym_templates.py  history.py  log.py  run_templates.py  schedule.py  stats.py
static/: manifest.json  service_worker.js
templates/: base.html  home.html
templates/completed_gym/: edit.html  list.html  log.html  view.html
templates/completed_gym/partials/: workout_table.html
templates/completed_run/: edit.html  list.html  log.html  view.html
templates/completed_run/partials/: workout_table.html
templates/exercises/: edit.html  list.html
templates/exercises/partials/: exercise_table.html
templates/gym_templates/: detail.html  list.html
templates/gym_templates/partials/: exercise_list.html  template_table.html
templates/history/: index.html
templates/log/: list.html
templates/run_templates/: detail.html  list.html
templates/run_templates/partials/: segment_list.html  template_table.html
templates/schedule/: calendar.html  list.html
templates/schedule/partials/: schedule_table.html
templates/stats/: index.html
